-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.1
-
None
-
Windows
-
ffc5b815694bf70d1f19308f0dad72dd23120f96 (qttools/5.5, 23.10.2015, 5.52)
It looks like windeployqt isn't clearing a list properly when converting translation files. Each "lconvert" run contains the file list from the prior run. For example, if I run
windeployqt --debug --no-compiler-runtime --verbose 10 run\Debug\Wireshark.exe
I see the following output:
---- Creating qt_ca.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm Creating qt_cs.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm Creating qt_de.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm Creating qt_en.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm Creating qt_fi.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm Creating qt_fr.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm Creating qt_he.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_he.qm qtbase_he.qm Creating qt_hu.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_he.qm qtbase_he.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_hu.qm qtbase_hu.qm qtmultimedia_hu.qm Creating qt_it.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_he.qm qtbase_he.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_hu.qm qtbase_hu.qm qtmultimedia_hu.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_it.qm qtbase_it.qm qtmultimedia_it.qm Creating qt_ja.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_he.qm qtbase_he.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_hu.qm qtbase_hu.qm qtmultimedia_hu.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_it.qm qtbase_it.qm qtmultimedia_it.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ja.qm qtbase_ja.qm qtmultimedia_ja.qm Creating qt_ko.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_he.qm qtbase_he.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_hu.qm qtbase_hu.qm qtmultimedia_hu.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_it.qm qtbase_it.qm qtmultimedia_it.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ja.qm qtbase_ja.qm qtmultimedia_ja.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ko.qm qtbase_ko.qm qtmultimedia_ko.qm Creating qt_lv.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_he.qm qtbase_he.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_hu.qm qtbase_hu.qm qtmultimedia_hu.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_it.qm qtbase_it.qm qtmultimedia_it.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ja.qm qtbase_ja.qm qtmultimedia_ja.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ko.qm qtbase_ko.qm qtmultimedia_ko.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_lv.qm qtbase_lv.qm Creating qt_ru.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_he.qm qtbase_he.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_hu.qm qtbase_hu.qm qtmultimedia_hu.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_it.qm qtbase_it.qm qtmultimedia_it.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ja.qm qtbase_ja.qm qtmultimedia_ja.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ko.qm qtbase_ko.qm qtmultimedia_ko.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_lv.qm qtbase_lv.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ru.qm qtbase_ru.qm qtmultimedia_ru.qm Creating qt_sk.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_he.qm qtbase_he.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_hu.qm qtbase_hu.qm qtmultimedia_hu.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_it.qm qtbase_it.qm qtmultimedia_it.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ja.qm qtbase_ja.qm qtmultimedia_ja.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ko.qm qtbase_ko.qm qtmultimedia_ko.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_lv.qm qtbase_lv.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ru.qm qtbase_ru.qm qtmultimedia_ru.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_sk.qm qtbase_sk.qm qtmultimedia_sk.qm Creating qt_uk.qm... Running: lconvert -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ca.qm qtbase_ca.qm qtmultimedia_ca.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_cs.qm qtbase_cs.qm qtmultimedia_cs.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_de.qm qtbase_de.qm qtmultimedia_de.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_en.qm qtbase_en.qm qtmultimedia_en.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fi.qm qtbase_fi.qm qtmultimedia_fi.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_fr.qm qtbase_fr.qm qtmultimedia_fr.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_he.qm qtbase_he.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_hu.qm qtbase_hu.qm qtmultimedia_hu.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_it.qm qtbase_it.qm qtmultimedia_it.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ja.qm qtbase_ja.qm qtmultimedia_ja.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ko.qm qtbase_ko.qm qtmultimedia_ko.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_lv.qm qtbase_lv.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_ru.qm qtbase_ru.qm qtmultimedia_ru.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_sk.qm qtbase_sk.qm qtmultimedia_sk.qm -o C:\Development\wireshark\cmbuild\run\Debug\translations\qt_uk.qm qtbase_uk.qm qtmultimedia_uk.qm ----
As a result you can end up with mixed translation text as discussed at
https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=11619
- is duplicated by
-
QTBUG-49155 German interface after windeployqt
-
- Closed
-
For Gerrit Dashboard: QTBUG-48946 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
138662,3 | windeployqt: Clear argument list of lconvert in locale loop. | 5.5 | qt/qttools | Status: MERGED | +2 | 0 |