windeployqt: Clear argument list of lconvert in locale loop.

Otherwise, the arguments accumulate.

Task-number: QTBUG-48946
Change-Id: I9670f98a75a2ec7131fb1ad5ebfefd3ed6c35469
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>